--- a/.pylintrc
+++ b/.pylintrc
@@ -14,6 +14,7 @@ disable=
     missing-function-docstring,
     missing-class-docstring,
     missing-module-docstring,
+    unspecified-encoding,
 
 [TYPECHECK]
-ignored-modules=LazyLoader
+ignored-modules=tensorflow,LazyLoader
